# RTLolaParser

./: Cargo.toml  ReadMe.md
resources/: RTLola_output.json  lola_spec.lola
src/: lib.rs  main.rs
