[package]
name = "lola_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
rtlola-frontend = "0.7.0"
rtlola-parser = "0.3.2"
regex = "1.7"

[lib]
name = "lola_parser"
crate-type = ["cdylib"]         
